<resources>
    <string name="load_picture" translatable="false">Photo</string>
    <string name="load_video" translatable="false">Video</string>
    <string name="start_camera" translatable="false">Camera</string>
    <string name="instruction" translatable="false">Press any button below to start</string>
    <string name="flash" translatable="false">Flash</string>
    <string name="change_camera" translatable="false">Flip</string>
    <string name="start_gesture_recognition">Start gesture recognition</string>
    <string name="app_main_image">App main image</string>
    <string name="app_desc">Recognize ASL digits using camera, photos or videos.</string>
    <string name="app_title">Hand Gesture Recognition app</string>
    <string name="number">No digit</string>
    <string name="flip">Flip</string>
    <string name="back">back</string>
</resources>
