<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/preview_display_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100">
        <TextView
            android:id="@+id/no_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/instruction" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme" android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_load_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_picture"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_load_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_video"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_start_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_camera"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
