<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity2"
    android:weightSum="100"
    android:background="@color/gesture_app_black">
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/app_title"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_weight="10"
        android:textColor="@color/gesture_app_white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="243dp"
        android:layout_height="212dp"
        android:layout_weight="10"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:background="#000"
        android:src="@drawable/back2x"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/app_desc"
        android:textColor="@color/gesture_app_white"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_weight="10"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_gesture_recognition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_weight="10"
        android:layout_gravity="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>
</LinearLayout>